bra descriptions modified

--- a/_posts/1-1-1-kelly-bra.textile
+++ b/_posts/1-1-1-kelly-bra.textile
@@ -8,3 +8,11 @@ price: 65
 
 camelCase: kelly
 ---
+Give your cleavage some royal confidence with this stunning satin bra in caramel fudge brown. Great color match for darker skin tones!
+
+* Caramel Fudge brown satin
+* Lightly padded plunge bra
+* Inner cotton lining
+* Fully adjustable straps
+* 3-hook fastening
+* Matching briefs
