--- a/_posts/1-1-4-mint-sorbet-bra.textile
+++ b/_posts/1-1-4-mint-sorbet-bra.textile
@@ -8,3 +8,10 @@ price: 65
 
 camelCase: mintSorbet
 ---
+Give your breasts a great uplift with this delicate Mint Sorbet plunge bra. Ultra thin patterned mesh over light lining and matching Ice Mint straps will look great even with very fair skin tone.
+
+* Mint Sorbet mesh over light lining
+* Lightly padded plunge bra
+* Fully adjustable straps
+* 3-hook fastening
+* Matching shorts
