--- a/_posts/1-1-6-free-time-bra.textile
+++ b/_posts/1-1-6-free-time-bra.textile
@@ -8,3 +8,10 @@ price: 65
 
 camelCase: freeTime
 ---
+Feel preppy in this navy blue tartan bra made of extremely soft and smooth fabric! With fabulous uplift and support, this bra feels like silk to wear.
+
+* Navy and sky blue tartan with navy straps
+* Lightly padded plunge bra
+* Fully adjustable straps
+* 3-hook fastening
+* Matching thongs
