--- a/_posts/1-1-8-lychee-sorbet-bra.textile
+++ b/_posts/1-1-8-lychee-sorbet-bra.textile
@@ -8,3 +8,10 @@ price: 65
 
 camelCase: lycheeSorbet
 ---
+The color of this bra reminds of vanilla raspberry ice cream, and with a subtle caramel fudge satin ribbon on top of the gore it is a perfect solution for comfort and style. 
+
+* Vanilla Raspberry Ice Cream mesh over light lining
+* Lightly padded plunge bra
+* Fully adjustable straps
+* 3-hook fastening
+* Matching shorts
