--- a/_posts/1-1-3-geisha-bra.textile
+++ b/_posts/1-1-3-geisha-bra.textile
@@ -9,13 +9,10 @@ price: 65
 camelCase: geisha
 ---
 
-<p>
-If you are looking for something elegant and feminine, this laced plunge bra should be a perfect answer. Subtle black- brown mesh with warm brown floral motives continues all the way around the band, on top of a cream base. The lace is very delicate and doesn't show through the clothing.
-</p>
+If you are looking for something elegant and feminine, this laced plunge bra should be a perfect answer. Subtle dark chocolate brown mesh with warm brown floral motives continues all the way around the band, on top of a cream base. The lace is very delicate and doesn't show under a thin top.
 
-<ul>
-	<li>Lighly padded plunge bra</li>
-	<li>Fully adjustable black straps</li>
-	<li>3-hook fastening</li>
-	<li>Matching briefs</li>
-</ul>
+* Dark Chocolade mesh over Cappuccino Cream base
+* Lightly padded plunge bra
+* Fully adjustable black straps
+* 3-hook fastening
+* Matching briefs
