added missing thumbnails

--- a/_posts/1-1-7-summer-time-bra.textile
+++ b/_posts/1-1-7-summer-time-bra.textile
@@ -9,6 +9,9 @@ price: 65
 camelCase: summerTime
 ---
 
-lorem ipsum
+This lovely design
 
-* matching shorts
+* Lightly padded plunge bra
+* Fully adjustable straps
+* 3-hook fastening
+* mMtching shorts
