finished copy for bras

--- a/_posts/1-1-3-geisha-bra.textile
+++ b/_posts/1-1-3-geisha-bra.textile
@@ -9,10 +9,13 @@ price: 65
 camelCase: geisha
 ---
 
-If you are looking for something elegant and feminine, this laced plunge bra should be a perfect answer. Subtle dark chocolate brown mesh with warm brown floral motives continues all the way around the band, on top of a cream base. The lace is very delicate and doesn't show under a thin top.
+This chic and stylish bra has received great reviews for a stunning fit and elegant details. 
 
-* Dark Chocolade mesh over Cappuccino Cream base
+Subtle dark chocolate brown mesh with red-brown floral motives continues all the way around the band, on top of a cream fabric. The lace is very delicate and does not show under a thin top.
+
+* Dark chocolate-brown mesh over cream base
+* Black straps and satin bow on top of the gore
 * Lightly padded plunge bra
-* Fully adjustable black straps
+* Fully adjustable straps
 * 3-hook fastening
 * Matching briefs
