--- a/_posts/1-1-5-juliette-bra.textile
+++ b/_posts/1-1-5-juliette-bra.textile
@@ -8,9 +8,12 @@ price: 65
 
 camelCase: juliette
 ---
-This ultra-feminine plunge bra has received great reviews for being both uplifting and supportive. Geometric Teal Grey lace over a Dusty Plum base farbric continues all the way around the band. The lace doesn't show under a thin top.
+This incredibly feminine plunge bra has been greatly praised for fantastic uplift and ultra-subtle fabrics. 
 
-* Teal Grey lace over Dusty Plum base fabric
+Geometric teal-grey lace over a light dusk-beige base farbric continues all the way around the band. The very delicate lace does not show under a thin top.
+
+* Teal-grey lace over dusk-beige base fabric
+* Dusk beige straps and satin bows
 * Lightly padded plunge bra
 * Inner cotton lining
 * Fully adjustable straps
