--- a/_posts/1-1-6-free-time-bra.textile
+++ b/_posts/1-1-6-free-time-bra.textile
@@ -8,9 +8,13 @@ price: 65
 
 camelCase: freeTime
 ---
-Feel preppy in this navy blue tartan bra made of extremely soft and smooth fabric! With fabulous uplift and support, this bra feels like silk to wear.
+Feel preppy in this navy blue tartan bra made of extremely soft and smooth fabric! 
+
+Giving your breasts fabulous uplift and support, this bra feels like silk to wear.
 
 * Navy and sky blue tartan with navy straps
+* Navy trimming and straps
+* Navy-blue bow on top of the gore
 * Lightly padded plunge bra
 * Fully adjustable straps
 * 3-hook fastening
