--- a/_posts/1-1-8-lychee-sorbet-bra.textile
+++ b/_posts/1-1-8-lychee-sorbet-bra.textile
@@ -8,9 +8,11 @@ price: 65
 
 camelCase: lycheeSorbet
 ---
-The color of this bra reminds of vanilla raspberry ice cream, and with a subtle caramel fudge satin ribbon on top of the gore it is a perfect solution for comfort and style. 
+Perfect for everyday wear, this bra will sure add some lychee flavor to your lingerie collection.
 
-* Vanilla Raspberry Ice Cream mesh over light lining
+A subtle caramel fudge satin ribbon on top of the gore gives it a little bit of not-so-casual touch.
+
+* Lychee-pink mesh over light lining
 * Lightly padded plunge bra
 * Fully adjustable straps
 * 3-hook fastening
