--- a/_posts/1-1-1-kelly-bra.textile
+++ b/_posts/1-1-1-kelly-bra.textile
@@ -8,11 +8,11 @@ price: 65
 
 camelCase: kelly
 ---
-Give your cleavage some royal confidence with this stunning satin bra in caramel fudge brown. Great color match for darker skin tones!
+This unique caramel fudge satin bra will daze you with elgance and fineness. Works perfect for special occassions or as a not-so-ordinary nude bra for darker skin tone ladies.
 
-* Caramel Fudge brown satin
+* Caramel fudge brown satin with matching lace trim and straps
+* Chocolate brown satin bows
 * Lightly padded plunge bra
-* Inner cotton lining
 * Fully adjustable straps
 * 3-hook fastening
 * Matching briefs
