--- a/_posts/1-1-4-mint-sorbet-bra.textile
+++ b/_posts/1-1-4-mint-sorbet-bra.textile
@@ -8,9 +8,13 @@ price: 65
 
 camelCase: mintSorbet
 ---
-Give your breasts a great uplift with this delicate Mint Sorbet plunge bra. Ultra thin patterned mesh over light lining and matching Ice Mint straps will look great even with very fair skin tone.
 
-* Mint Sorbet mesh over light lining
+Perfect for everyday wear, this fabulously uplifting bra will add a fresh mint accent to your lingerie drawer.
+
+Mint sorbet green pattern and ice mint straps look fantastic not only with tanned skin tone!
+
+* Mint sorbet patterned mesh over light lining
+* Glitter bow on top of the gore
 * Lightly padded plunge bra
 * Fully adjustable straps
 * 3-hook fastening
