--- a/_posts/1-1-1-kelly-bra.textile
+++ b/_posts/1-1-1-kelly-bra.textile
@@ -5,6 +5,7 @@ big-thumb: "img/bras/kelly-big.jpg"
 small-thumb-1: "img/bras/kelly-thumb1.jpg"
 small-thumb-2: "img/bras/kelly-thumb2.jpg"
 price: 65
+tagline: "Unique caramel fudge satin plunge bra, up to N cup! #wellfitting #bra"
 
 camelCase: kelly
 ---
