--- a/_posts/1-1-2-green-velvet-bra.textile
+++ b/_posts/1-1-2-green-velvet-bra.textile
@@ -5,6 +5,7 @@ big-thumb: "img/bras/green-velvet-big.jpg"
 small-thumb-1: "img/bras/green-velvet-thumb1.jpg"
 small-thumb-2: "img/bras/green-velvet-thumb2.jpg"
 price: 65
+tagline: "Fabulous deep ivy-green bra, up to N cup! #wellfitting #bra"
 
 camelCase: greenVelvet
 ---
