--- a/_posts/1-1-5-juliette-bra.textile
+++ b/_posts/1-1-5-juliette-bra.textile
@@ -4,7 +4,8 @@ main-thumb: "img/bras/juliette.png"
 big-thumb: "img/bras/juliette-big.jpg"
 small-thumb-1: "img/bras/juliette-thumb1.jpg"
 small-thumb-2: "img/bras/juliette-thumb2.jpg"
-price: 65
+bra-price: 69
+bottoms-price: 34
 tagline: "Ultra feminine plunge bra, up to N cup! #wellfitting #bra"
 
 camelCase: juliette
