--- a/_posts/1-1-3-geisha-bra.textile
+++ b/_posts/1-1-3-geisha-bra.textile
@@ -4,7 +4,8 @@ main-thumb: "img/bras/geisha.png"
 big-thumb: "img/bras/geisha-big.jpg"
 small-thumb-1: "img/bras/geisha-thumb1.jpg"
 small-thumb-2: "img/bras/geisha-thumb2.jpg"
-price: 65
+bra-price: 69
+bottoms-price: 29
 tagline: "Super chic plunge bra, up to N cup! #wellfitting #bra"
 
 camelCase: geisha
