--- a/_posts/1-1-4-mint-sorbet-bra.textile
+++ b/_posts/1-1-4-mint-sorbet-bra.textile
@@ -4,7 +4,8 @@ main-thumb: "img/bras/mint-sorbet.png"
 big-thumb: "img/bras/mint-sorbet-big.jpg"
 small-thumb-1: "img/bras/mint-sorbet-thumb1.jpg"
 small-thumb-2: "img/bras/mint-sorbet-thumb2.jpg"
-price: 65
+bra-price: 49
+bottoms-price: 24
 tagline: "Fresh mint-sorbet-green bra, up to N cup! #wellfitting #bra"
 
 camelCase: mintSorbet
