--- a/_posts/1-1-7-summer-time-bra.textile
+++ b/_posts/1-1-7-summer-time-bra.textile
@@ -4,7 +4,8 @@ main-thumb: "img/bras/summer-time.png"
 big-thumb: "img/bras/summer-time-big.jpg"
 small-thumb-1: "img/bras/summer-time-thumb1.jpg"
 small-thumb-2: "img/bras/summer-time-thumb2.jpg"
-price: 65
+bra-price: 59
+bottoms-price: 29
 tagline: "Vibrant raspberry red plunge bra, up to N cup! #wellfitting #bra"
 
 camelCase: summerTime
