--- a/_posts/1-1-8-lychee-sorbet-bra.textile
+++ b/_posts/1-1-8-lychee-sorbet-bra.textile
@@ -4,7 +4,8 @@ main-thumb: "img/bras/lychee-sorbet.png"
 big-thumb: "img/bras/lychee-sorbet-big.jpg"
 small-thumb-1: "img/bras/lychee-sorbet-thumb1.jpg"
 small-thumb-2: "img/bras/lychee-sorbet-thumb2.jpg"
-price: 65
+bra-price: 49
+bottoms-price: 24
 tagline: "Lychee-sorbet-pinkish plunge bra, up to N cup! #wellfitting #bra"
 
 camelCase: lycheeSorbet
