--- a/_posts/1-1-1-kelly-bra.textile
+++ b/_posts/1-1-1-kelly-bra.textile
@@ -6,6 +6,7 @@ small-thumb-1: "img/bras/kelly-thumb1.jpg"
 small-thumb-2: "img/bras/kelly-thumb2.jpg"
 bra-price: 69
 bottoms-price: 29
+bottoms-type: Briefs
 tagline: "Unique caramel fudge satin plunge bra, up to N cup! #wellfitting #bra"
 
 camelCase: kelly
