--- a/_posts/1-1-6-free-time-bra.textile
+++ b/_posts/1-1-6-free-time-bra.textile
@@ -6,6 +6,7 @@ small-thumb-1: "img/bras/free-time-thumb1.jpg"
 small-thumb-2: "img/bras/free-time-thumb2.jpg"
 bra-price: 59
 bottoms-price: 29
+bottoms-type: Thongs
 tagline: "Preppy plunge bra in navy tartan, up to N cup! #wellfitting #bra"
 
 camelCase: freeTime
