add to cart buttons added

--- a/_posts/1-1-5-juliette-bra.textile
+++ b/_posts/1-1-5-juliette-bra.textile
@@ -13,7 +13,7 @@ camelCase: juliette
 ---
 This incredibly feminine plunge bra has been greatly praised for fantastic uplift and ultra-subtle fabrics. 
 
-Geometric teal-grey lace over a light dusk-beige base farbric continues all the way around the band. The very delicate lace does not show under a thin top.
+The very delicate lace does not show under a thin top.
 
 * Teal-grey lace over dusk-beige base fabric
 * Dusk beige straps and satin bows
