--- a/_posts/1-1-2-green-velvet-bra.textile
+++ b/_posts/1-1-2-green-velvet-bra.textile
@@ -14,8 +14,8 @@ camelCase: greenVelvet
 
 Green lingerie addicts will love this unique, deep ivy green plunge bra! Floral velvet flocking continues all the way around the band, and the cups are lightly lined with a soft green padding.
 
-* Ivy green velvet flocking over ultra light tulle netting
-* Deep green straps and velvet ribbon on top of the gore
+* Ivy green velvet flocking over tulle netting
+* Velvet ribbon on top of the gore
 * Lightly padded plunge bra
 * Fully adjustable straps
 * 3-hook fastening
