--- a/_posts/1-1-9-tropical-garden-bra.textile
+++ b/_posts/1-1-9-tropical-garden-bra.textile
@@ -6,7 +6,7 @@ small-thumb-1: "img/bras/tropical-garden-thumb1.jpg"
 small-thumb-2: "img/bras/tropical-garden-thumb2.jpg"
 bra-price: 59
 bottoms-price: 24
-bottoms-type: Thong
+bottoms-type: Thongs
 tagline: "Tropical-garden-floral plunge bra, up to N cup! #wellfitting #bra"
 
 camelCase: tropicalGarden
